[package]
name = "rcqs"
description = "Catalog Queue System for Redis."
version = "0.2.2"
authors = ["Omar Zabala-Ferrera <ozf-dev@pm.me>"]
documentation = "https://docs.rs/rcqs"
readme = "README.md"
repository = "https://github.com/ozabalaferrera/rcqs"
exclude = [
    ".github/*",
    ".vscode/*",
    "docs/"
]
categories = ["database", "data-structures"]
edition = "2021"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
redis = {version = "0.29.0", features = ["tokio-comp", "json"] }
redis-macros="0.5"
serde = { version = "1.0" }
serde_json = { version = "1.0" }
uuid = { version = "1.17", features = ["v4", "serde"] }

[dev-dependencies]
constcat = "0.6"
test-utils = { path = "test-utils" }
test-with = { version = "0.14", default-features = false, features = ["resource"] }