[package]
name = "rcqs"
description = "Catalog Queue System for Redis."
version = "0.2.4"
authors = ["Omar Zabala-Ferrera <ozf-dev@pm.me>"]
documentation = "https://docs.rs/rcqs"
readme = "README.md"
repository = "https://github.com/ozabalaferrera/rcqs"
exclude = [
    ".github/*",
    ".vscode/*",
    "docs/"
]
categories = ["database", "data-structures"]
edition = "2021"
license = "MIT"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"]}
redis = {version = "0.32.3", features = ["tokio-comp", "json"] }
redis-macros="1.0.0"
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[dev-dependencies]
constcat = "0.6.1"
test-utils = { path = "test-utils" }
test-with = { version = "0.15.2", default-features = false, features = ["resource"] }