[package]
name = "test-utils"
description = "Utility functions for testing rcqs crate in this repo. Should not be published."
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rcqs = { path = ".."}
redis = {version = "0.27.6", features = [] }
serde = { version = "1.0" }
uuid = { version = "1.11", features = ["v4", "serde"] }