[package]
name = "test-utils"
description = "Utility functions for testing rcqs crate in this repo. Should not be published."
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
rcqs = { path = ".."}
redis = {version = "1.0", features = [] }
serde = { version = "1.0.219" }
uuid = { version = "1.17.0", features = ["v4", "serde"] }